; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Configcmp.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Configcmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Configcmp(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.config*, align 8
  %6 = alloca %struct.config*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = bitcast i8* %8 to %struct.config*
  store %struct.config* %9, %struct.config** %5, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.config*
  store %struct.config* %11, %struct.config** %6, align 8
  %12 = load %struct.config*, %struct.config** %5, align 8
  %13 = getelementptr inbounds %struct.config, %struct.config* %12, i32 0, i32 1
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.config*, %struct.config** %6, align 8
  %18 = getelementptr inbounds %struct.config, %struct.config* %17, i32 0, i32 1
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = sub nsw i32 %16, %21
  store i32 %22, i32* %7, align 4
  %23 = load i32, i32* %7, align 4
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %25, label %33

25:                                               ; preds = %2
  %26 = load %struct.config*, %struct.config** %5, align 8
  %27 = getelementptr inbounds %struct.config, %struct.config* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.config*, %struct.config** %6, align 8
  %30 = getelementptr inbounds %struct.config, %struct.config* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = sub nsw i32 %28, %31
  store i32 %32, i32* %7, align 4
  br label %33

33:                                               ; preds = %25, %2
  %34 = load i32, i32* %7, align 4
  ret i32 %34
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
